vlib/v/checker/tests/immutable_map_postfix.out
vlib/v/checker/tests/immutable_map_postfix.v:3:2: error: `m` is immutable, declare it with `mut` to make it mutable
    1 | fn main() {
    2 |     m := map[string]int
    3 |     m['test']++
      |     ^
    4 |     m['test']--
    5 | }
vlib/v/checker/tests/immutable_map_postfix.v:4:2: error: `m` is immutable, declare it with `mut` to make it mutable
    2 |     m := map[string]int
    3 |     m['test']++
    4 |     m['test']--
      |     ^
    5 | }
