vlib/v/checker/tests/immutable_map_postfix.vv
fn main() {
	m := map[string]int
	m['test']++
	m['test']--
}
